--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Anthony Guilherme</title>
+    <link rel="stylesheet" href="./components/reset.css">
+    <link rel="stylesheet" href="./components/main-body.css">
+    <link rel="stylesheet" href="./components/main-header.css">
 </head>
 <body>
-    
+    <header class="main_header">
+        <h1 class="header__title">anthony</h1>
+        <nav class="header__nav">
+            <a class="header__nav__link" href="">Home</a>
+            <a class="header__nav__link" href="">Techs</a>
+            <a class="header__nav__link" href="">Contact</a>
+        </nav>
+    </header>
 </body>
 </html>
