--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Source+Code+Pro:ital,wght@0,400;1,300&display=swap"
+        rel="stylesheet">
+
     <title>Anthony Guilherme</title>
+
     <link rel="stylesheet" href="./components/reset.css">
     <link rel="stylesheet" href="./components/main-body.css">
     <link rel="stylesheet" href="./components/main-header.css">
+
 </head>
+
 <body>
     <header class="main_header">
         <h1 class="header__title">anthony</h1>
@@ -20,4 +30,5 @@
         </nav>
     </header>
 </body>
+
 </html>
