create the main-section with css style

--- a/index.html
+++ b/index.html
@@ -17,18 +17,28 @@
     <link rel="stylesheet" href="./components/reset.css">
     <link rel="stylesheet" href="./components/main-body.css">
     <link rel="stylesheet" href="./components/main-header.css">
+    <link rel="stylesheet" href="./components/main-section.css">
 
 </head>
 
 <body>
     <header class="main_header">
-        <h1 class="header__title">anthony</h1>
+        <h2 class="header__title">anthony</h2>
         <nav class="header__nav">
             <a class="header__nav__link" href="">Home</a>
             <a class="header__nav__link" href="">Techs</a>
             <a class="header__nav__link" href="">Contact</a>
         </nav>
     </header>
+    <section class="main_section">
+        <article class="main__section__container">
+            <h1 class="container__title">Hi, i am <span class="container__span_color">Anthony Guilherme</span></h1>
+            <p class="container__text">This is my portfolio where I show the best of my work as a web developer.
+            </p>
+            <button class="container__button">Meet my work</button>
+        </article>
+        <div class="img__box__shadow"><img class="main__section__img" src="./imgs/Anthony art.png" alt="anthony art"></div>
+    </section>
 </body>
 
 </html>
