--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <link rel="stylesheet" href="./components/main-body.css">
     <link rel="stylesheet" href="./components/main-header.css">
     <link rel="stylesheet" href="./components/main-section.css">
+    <link rel="stylesheet" href="./components/tech-section.css">
 
 </head>
 
 <body>
+    
     <header class="main_header">
         <h2 class="header__title">anthony</h2>
         <nav class="header__nav">
@@ -30,6 +32,7 @@
             <a class="header__nav__link" href="">Contact</a>
         </nav>
     </header>
+    <main>   
     <section class="main_section">
         <article class="main__section__container">
             <h1 class="container__title">Hi, i am <span class="container__span_color">Anthony Guilherme</span></h1>
@@ -37,8 +40,53 @@
             </p>
             <button class="container__button">Meet my work</button>
         </article>
-        <div class="img__box__shadow"><img class="main__section__img" src="./imgs/Anthony art.png" alt="anthony art"></div>
+        <div class="img__box__shadow"><img class="main__section__img" src="./imgs/Anthony art.png" alt="anthony art">
+        </div>
     </section>
+
+    <section class="main_section tech__section">
+        <h2 class="tech__section__title">My <span class="container__span_color">techs</span>.</h2>
+        <div class="tech__container__cards">
+        <article class="tech__section__card">
+            <div class="tech__card__box__color">
+                <h2 class="section__card__title">html</h2>
+                <p class="section__card__text">Uma linguagem de marcação poderosa para a criação de páginas web presente
+                    em todo o
+                    desenvolvimento de sites.</p>
+                <img class="section__card__img" src="./imgs/icon-html.png" alt="">
+            </div>
+        </article>
+        <article class="tech__section__card">
+            <div class="tech__card__box__color">
+                <h2 class="section__card__title">css</h2>
+                <p class="section__card__text">As famosas folhas de estilo que sempre acompanham nosso HTML para deixar
+                    nossas páginas bonitas e
+                    responsivas.</p>
+                <img class="section__card__img" src="./imgs/icon-css.png" alt="">
+            </div>
+        </article>
+        <article class="tech__section__card">
+            <div class="tech__card__box__color">
+                <h2 class="section__card__title">javascript</h2>
+                <p class="section__card__text">A principal linguagem de programação do desenvolvimento web e a
+                    queridinha dos devs, está sempre presente
+                    para o que der e vier.</p>
+                <img class="section__card__img" src="./imgs/icon-js.png" alt="">
+            </div>
+        </article>
+        <article class="tech__section__card">
+            <div class="tech__card__box__color">
+                <h2 class="section__card__title">react</h2>
+                <p class="section__card__text">A famosa biblioteca de criação de aplicações web poderosas feita pela
+                    Meta. Esta ferramenta mudou o jeito
+                    de criar sites.</p>
+                <img class="section__card__img" src="./imgs/icon-react.png" alt="">
+            </div>
+        </div>
+        </article>
+
+    </section>
+</main>
 </body>
 
 </html>
