create the responsive components

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./components/main-section.css">
     <link rel="stylesheet" href="./components/tech-section.css">
     <link rel="stylesheet" href="./components/main-footer.css">
+    <link rel="stylesheet" href="./components/mobile.css">
 
 </head>
 
