add a scroll smooth

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <header class="main_header">
         <h2 class="header__title">anthony</h2>
         <nav class="header__nav">
-            <a class="header__nav__link" href="">Home</a>
-            <a class="header__nav__link" href="">Techs</a>
-            <a class="header__nav__link" href="">Contact</a>
+            <a class="header__nav__link" href="#home">Home</a>
+            <a class="header__nav__link" href="#techs">Techs</a>
+            <a class="header__nav__link" href="#contacts">Contact</a>
         </nav>
     </header>
     <main>
-        <section class="main_section">
+        <section class="main_section" id="home">
             <article class="main__section__container">
                 <h1 class="container__title">Hi, i am <span class="container__span_color">Anthony Guilherme</span></h1>
                 <p class="container__text">This is my portfolio where I show the best of my work as a web developer.
@@ -47,7 +47,7 @@
             </div>
         </section>
 
-        <section class="main_section tech__section">
+        <section class="main_section tech__section" id="techs">
             <h2 class="tech__section__title">My <span class="container__span_color">techs</span>.</h2>
             <div class="tech__container__cards">
                 <article class="tech__section__card">
@@ -84,7 +84,7 @@
             </div>
             </article>
         </section>
-        <footer class="main_section main__footer">
+        <footer class="main_section main__footer" id="contacts">
             <h2 class="footer__title">Let's work <span class="container__span_color">together</span>.</h2>
             <p class="footer_text">Contact me through the following ways so we can do something amazing together!</p>
 
