fixed some bugs and

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./components/main-header.css">
     <link rel="stylesheet" href="./components/main-section.css">
     <link rel="stylesheet" href="./components/tech-section.css">
+    <link rel="stylesheet" href="./components/main-contacts.css">
     <link rel="stylesheet" href="./components/main-footer.css">
     <link rel="stylesheet" href="./components/mobile.css">
 
@@ -84,28 +85,30 @@
             </div>
             </article>
         </section>
-        <footer class="main_section main__footer" id="contacts">
-            <h2 class="footer__title">Let's work <span class="container__span_color">together</span>.</h2>
-            <p class="footer_text">Contact me through the following ways so we can do something amazing together!</p>
+        <section class="main_section main__contacts" id="contacts">
+            <h2 class="contacts__title">Let's work <span class="container__span_color">together</span>.</h2>
+            <p class="contacts_text">Contact me through the following ways so we can do something amazing together!</p>
 
-            <ul class="footer__list__cards">
-                <li class="footer__card" href="">
-                    <img class="footer__card__img" src="./imgs/mdi_whatsapp.svg" alt="">
-                    <p class="footer__card__text">(12) 99159-4622</p>
+            <ul class="contacts__list__cards">
+                <li class="contacts__card" href="">
+                    <img class="contacts__card__img" src="./imgs/mdi_whatsapp.svg" alt="">
+                    <p class="contacts__card__text">(12) 99159-4622</p>
                 </li>
-                <li class="footer__card -colorlinkedin" href="">
-                    <img class="footer__card__img" src="./imgs/mdi_linkedin.svg" alt="">
-                    <p class="footer__card__text">in/anthony-guilherme</p>
+                <li class="contacts__card -colorlinkedin" href="">
+                    <img class="contacts__card__img" src="./imgs/mdi_linkedin.svg" alt="">
+                    <p class="contacts__card__text">in/anthony-guilherme</p>
                 </li>
-                <li class="footer__card -colorgithub" href="">
-                    <img class="footer__card__img" src="./imgs/mdi_github.svg" alt="">
-                    <p class="footer__card__text">oAnthonyG</p>
+                <li class="contacts__card -colorgithub" href="">
+                    <img class="contacts__card__img" src="./imgs/mdi_github.svg" alt="">
+                    <p class="contacts__card__text">oAnthonyG</p>
                 </li>
-                <li class="footer__card -coloremail" href="">
-                    <img class="footer__card__img" src="./imgs/mdi_gmail.svg" alt="">
-                    <p class="footer__card__text">anthonytguilherme@hotmail.com</p>
+                <li class="contacts__card -coloremail" href="">
+                    <img class="contacts__card__img" src="./imgs/mdi_gmail.svg" alt="">
+                    <p class="contacts__card__text">anthonytguilherme@hotmail.com</p>
                 </li>
             </ul>
+        </section>
+        <footer class="main_footer">
             <h3 class="footer__copyright">All rights reserved - 2022</h3>
         </footer>
     </main>
