create a button for change color background

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h1 class="container__title">Hi, i am <span class="container__span_color">Anthony Guilherme</span></h1>
                 <p class="container__text">This is my portfolio where I show the best of my work as a web developer.
                 </p>
-                <button class="container__button">Meet my work</button>
+                <button onclick="changeColor()" class="container__button">Meet my work</button>
             </article>
             <div class="img__box__shadow"><img class="main__section__img" src="./imgs/Anthony art.png"
                     alt="anthony art">
@@ -112,6 +112,7 @@
             <h3 class="footer__copyright">All rights reserved - 2022</h3>
         </footer>
     </main>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
